// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Chip with Avatar: Components/Chip with Avatar 1`] = `
.c1.c1 {
  width: 24px;
  height: 24px;
  font-size: 0.75rem;
  font-weight: 500;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  background-color: #f5f6fb;
}

.c1.c1:hover {
  opacity: 0.88;
  cursor: pointer;
}

.c1.c1:active {
  opacity: 0.76;
}

.c1 > .avatar-short-name {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0.c0 {
  margin: 4px;
  padding: 4px;
  box-sizing: border-box;
  overflow: hidden;
}

.c0.c0:hover {
  opacity: 0.88;
}

.c0.c0:active {
  opacity: 0.76;
}

.c0 .deleteIcon {
  width: 20px;
  height: 20px;
}

.c0 .label {
  display: inline;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 .avatar {
  color: #fff;
}

.c0 .avatar span {
  width: auto;
  height: auto;
}

<div
  className="MuiChip-root c0"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
>
  <div
    className="MuiAvatar-root MuiChip-avatar avatar c1"
    size="small"
  >
    <img
      className="MuiAvatar-img"
      src="test-file-stub"
    />
  </div>
  <span
    className="MuiChip-label label"
  >
    Basic Chip
  </span>
</div>
`;

exports[`Storyshots Components/Chip with nothing: Components/Chip with nothing 1`] = `
.c0.c0 {
  margin: 4px;
  padding: 4px;
  box-sizing: border-box;
  overflow: hidden;
}

.c0.c0:hover {
  opacity: 0.88;
}

.c0.c0:active {
  opacity: 0.76;
}

.c0 .deleteIcon {
  width: 20px;
  height: 20px;
}

.c0 .label {
  display: inline;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 .avatar {
  color: #fff;
}

.c0 .avatar span {
  width: auto;
  height: auto;
}

<div
  className="MuiChip-root c0"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
>
  <span
    className="MuiChip-label label"
  >
    Basic Chip
  </span>
</div>
`;
